--- a/website/404.md
+++ b/website/404.md
@@ -1,71 +1,70 @@
----
 permalink: /404.html
----
 
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>404 Not Found</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Added more sans-serif options for broader compatibility */
-            background-color: #1a1a1a;
-            color: #fff;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            text-align: center;
-            overflow: hidden; /* Prevents scrollbars if content slightly exceeds viewport */
-        }
-        h1 {
-            font-size: 6rem;
-            margin: 0;
-            color: #ff4f4f;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); /* Added subtle text shadow */
-        }
-        p {
-            font-size: 1.5rem;
-            margin: 0.5rem 0 2rem;
-            color: #ccc;
-        }
-        a {
-            text-decoration: none;
-            padding: 0.8rem 1.5rem;
-            background: #ff4f4f;
-            color: #fff;
-            border-radius: 8px;
-            font-weight: bold;
-            transition: background 0.3s ease, transform 0.2s ease; /* Added transform for a subtle click effect */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Added box shadow for depth */
-        }
-        a:hover {
-            background: #ff2f2f;
-            transform: translateY(-2px); /* Lifts button slightly on hover */
-        }
-        a:active {
-            transform: translateY(0); /* Resets button on click */
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-        }
-        .ghost {
-            font-size: 5rem;
-            animation: float 3s ease-in-out infinite;
-            margin-bottom: 20px; /* Added space below the ghost */
-        }
-        @keyframes float {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-15px); }
-        }
-    </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>404 Not Found</title>
+<style>
+body {
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Added more sans-serif options for broader compatibility /
+background-color: #1a1a1a;
+color: #fff;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+height: 100vh;
+margin: 0;
+text-align: center;
+overflow: hidden; / Prevents scrollbars if content slightly exceeds viewport /
+}
+h1 {
+font-size: 6rem;
+margin: 0;
+color: #ff4f4f;
+text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); / Added subtle text shadow /
+}
+p {
+font-size: 1.5rem;
+margin: 0.5rem 0 2rem;
+color: #ccc;
+}
+a {
+text-decoration: none;
+padding: 0.8rem 1.5rem;
+background: #ff4f4f;
+color: #fff;
+border-radius: 8px;
+font-weight: bold;
+transition: background 0.3s ease, transform 0.2s ease; / Added transform for a subtle click effect /
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); / Added box shadow for depth /
+}
+a:hover {
+background: #ff2f2f;
+transform: translateY(-2px); / Lifts button slightly on hover /
+}
+a:active {
+transform: translateY(0); / Resets button on click /
+box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+}
+.ghost {
+font-size: 5rem;
+animation: float 3s ease-in-out infinite;
+margin-bottom: 20px; / Added space below the ghost */
+}
+@keyframes float {
+0%, 100% { transform: translateY(0); }
+50% { transform: translateY(-15px); }
+}
+</style>
 </head>
 <body>
-    <div class="ghost">👻</div>
-    <h1>404</h1>
-    <p>Oops! The page you’re looking for has vanished.</p>
-    <a href="/">Go Back Home</a>
+<div class="ghost">👻</div>
+<h1>404</h1>
+<p>Oops! The page you’re looking for has vanished.</p>
+<a href="/">Go Back Home</a>
 </body>
 </html>
